--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario de Pacientes</title>
     <link rel="stylesheet" href="estilos.css">
+    <!-- SweetAlert2 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet">
+    <!-- Toasty CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js@1.12.0/src/toastify.min.css">
 </head>
 <body>
     <h1>Formulario de Pacientes</h1>
@@ -30,14 +34,12 @@
     </form>
 
     <h2>Pacientes por Médico</h2>
-
     <label for="fechaSeleccionada">Seleccionar fecha:</label>
     <input type="date" id="fechaSeleccionada" name="fechaSeleccionada">
     <button id="cargarPacientesBtn">Cargar Pacientes</button>
 
     <div id="pacientesPorMedico"></div>
 
-    <!-- Sección de búsqueda movida al final -->
     <h2>Buscar Paciente</h2>
     <label for="nombreBusqueda">Nombre:</label>
     <input type="text" id="nombreBusqueda" name="nombreBusqueda">
@@ -47,6 +49,11 @@
 
     <div id="resultadoBusqueda"></div>
 
+    <!-- SweetAlert2 JS -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.all.min.js"></script>
+    <!-- Toasty JS -->
+    <script src="https://cdn.jsdelivr.net/npm/toastify-js@1.12.0/src/toastify.min.js"></script>
+    <!-- Tu JavaScript -->
     <script src="./js/main.js"></script>
 </body>
 </html>
